# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)

  DD MMM YYYY; YOUR_NAME <YOUR_EMAIL> changed_file1, changed_file2 :
  Initial import.  Ebuild submitted by submitter_name <submitter_email>.
  Note that the "changed_file" listing is optional if you are simply bumping
  the rev of the ebuild and are only making changes to the .ebuild file
  itself.  Also note that we now have a single unified paragraph rather than
  having the first line separated from the rest by a newline.  Everything
  should be in one block like this. (note by drobbins, 16 Jul 2002)

  DD MMM YYYY; YOUR_NAME <YOUR_EMAIL> changed_file1, changed_file2: this is
  an earlier ChangeLog entry.
 
-- Explanation of ChangeLog format:

  ***************************************************************************
  THIS IS IMPORTANT: The ChangeLog format is a *chronological* account of all
  changes made to a set of ebuilds. That means that the most recent ChangeLog
  entry *always* goes at the top of the file. More explanation below.
  ***************************************************************************

  ***************************************************************************
  ANOTHER IMPORTANT NOTE: There are some ChangeLogs that don't follow this
  format and organize all changes under the "correct" "*" entry. This is not
  correct. However, rather than making a concerted effort to fix these
  ChangeLogs, we should spend our energy defining a comprehensive and strict
  XML-based ChangeLog format which we then migrate to. But for any entries to
  any ChangeLog that *you* make, please make sure to always add entries to the
  top of the file like a good boy/girl. Even do this if it's clear that you're
  adding an entry to a b0rked ChangeLog.
  ***************************************************************************
  