@@ -10,7 +10,7 @@ AUX pymol-9999-r2-data-path.patch 2584 RMD160 c5fdd7884241a493578be5a2b658ac0cd0
 AUX pymol-9999-r2-shaders.patch 524 RMD160 07d83746617fba941bba8ad95d889e22e5310c9a SHA1 2cbbd82a91029d7c540535c83b0f2663e58a891e SHA256 96b1e2b30c7d6699d87a9efb5cab242db66683f71bfd58bbc69f87ce4df397e0
 EBUILD pymol-1.0-r2.ebuild 2970 RMD160 4edb78da7aad21fac296ffd185642b3a2c92fd76 SHA1 d5f47916635c2855a36ede8eaa0749b5d83394fa SHA256 405a980285ce04f505ada924c62930e9f503bf7b7b0b134e97b3ad9a61bb22ce
 EBUILD pymol-1.1-r1.ebuild 3116 RMD160 fbfd909ea37675133df59802895ea3d6204fe664 SHA1 38f6a018779373b502c580711208675e48aa50c9 SHA256 2a79a4c5f303befc0342b2cc671a04019d060ff7209405f057b66060cc247cd7
-EBUILD pymol-1.1-r2.ebuild 2805 RMD160 cb0c88619e6710ae5d98aebe10e319b74189aace SHA1 1ac4d53c2f1163e14b27109f6db9c51d364ac26f SHA256 d2a20cf9eb97aed8bde4705b83426aeefabfc3eb17d98042f753af0fd9535c65
+EBUILD pymol-1.1-r2.ebuild 3121 RMD160 1c9f7070a3640ce8ae579a84b3e525cf44bfc569 SHA1 8eff09eb0f65d06ac87cec570ee10a8b7a230132 SHA256 0ce9528e1918c47f6247956a6453d7b4a8d84974d64e5b5c45acbb1da5a7fee5
 EBUILD pymol-9999-r2.ebuild 3034 RMD160 f03fe6a2506b3b1eca476214fd51278aa80488d2 SHA1 b71d5e719b02d827cd586be1a1de87a10bd5b7ae SHA256 6b95f79caaabccda4ad393c1a09f625c8f882a34169b83db0a7cf61d1586b9d8
-MISC ChangeLog 3666 RMD160 66cb4dd33af7e01d9cddb6d426cf6a23e4ed4cd5 SHA1 69f1df908689e7aa10662bec32bbec9a9f50a2d1 SHA256 3106e6ce482f8b35c9129cf09af41fb9634263ed1186dec32ef1bc8436f62b34
+MISC ChangeLog 3850 RMD160 528d1c851920580e30439fa45b018182250d556f SHA1 d221366c69b46379c9b2b07c5a024dbbc3214323 SHA256 33c6b7a1d32ccabb26467fa3046ac0d96fec711fb86fcd77edccc0c06174b80b
 MISC metadata.xml 1004 RMD160 746f62b69544698c9046b49b401b921005d4a009 SHA1 df8ea2a7641b0183024365684b1fa908a08de26c SHA256 afcde7f0864d2b0ee7f796a474ac483bf270f40443bf7598215d7788f4291448
