@@ -5,7 +5,7 @@
 NEED_PYTHON=2.4
 PYTHON_MODNAME="chempy pmg_tk pymol"
 
-inherit distutils subversion
+inherit distutils eutils multilib subversion
 
 ESVN_REPO_URI="https://pymol.svn.sourceforge.net/svnroot/pymol/trunk/pymol"
 ESVN_UPDATE_CMD="svn -r 3395 update"
@@ -16,7 +16,7 @@ HOMEPAGE="http://pymol.sourceforge.net/"
 LICENSE="PSF-2.2"
 IUSE="apbs shaders"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 
 RDEPEND="dev-python/pmw
 	dev-python/numeric
@@ -28,15 +28,22 @@ RDEPEND="dev-python/pmw
 		sci-chemistry/apbs
 		sci-chemistry/pdb2pqr
 	)"
-DEPEND="${DEPEND}"
+DEPEND="${RDEPEND}"
 
-pkg_setup(){
-	python_tkinter_exists
-	python_version
+pkg_setup() {
+	if ! built_with_use dev-lang/python tk; then
+		eerror "Please reemerge dev-lang/python with 'tk' support or pymol will"
+		eerror "not work. In order to fix this, execute the following:"
+		eerror "echo \"dev-lang/python tk\" >> /etc/portage/package.use"
+		eerror "and reemerge dev-lang/python before emerging pymol."
+		die "requires dev-lang/python with use-flag 'tk'!!"
+	fi
 }
 
 src_unpack() {
 	subversion_src_unpack
+
+	python_version
 
 	epatch "${FILESDIR}"/${PF}-data-path.patch
 
@@ -103,7 +110,6 @@ src_install() {
 pkg_postinst() {
 	distutils_pkg_postinst
 
-	# The apbs ebuild was just corrected and not bumped #213616
 	if use apbs; then
 		[[ -e /usr/share/apbs-0.5* ]] && \
 		ewarn "You need to reemerge sci-chemistry/apbs!"
