@@ -2,6 +2,16 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pymol-1.1-r2 (28 Jun 2008)
+
+  28 Jun 2008;  <>  pymol-1.1-r2.ebuild
+  # INSERT ENTRY HERE
+
+*pymol-1.1-r2 (28 Jun 2008)
+
+  28 Jun 2008;  <>  pymol-1.1-r2.ebuild
+  # INSERT ENTRY HERE
+
 *<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)
 
   DD MMM YYYY; YOUR_NAME <YOUR_EMAIL> changed_file1, changed_file2 :
